# aula_17_bootcamp_python

./: .gitignore  desafio.py  desafio_query.py  exemplo01.py  pyproject.toml
